# NPB3.0-omp-C

./: .gitignore  CMakeLists.txt
BT/: npbparams.h
CG/: npbparams.h
EP/: npbparams.h
FT/: npbparams.h
IS/: is.c  npbparams.h
LU/: npbparams.h
MG/: npbparams.h
SP/: npbparams.h
